# breadshot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  bakery.toml
.forgejo/workflows/: beta-release.yml  dev-release.yml  mirror.yml  release.yml
.github/workflows/: release.yml
src/: capture.rs  config.rs  main.rs
